[package]
name = "thibaud_dauce"
version = "0.1.0"
authors = ["Thibaud Dauce <git@hadibut.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1"
pulldown-cmark = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
copy_dir = "0.1.2"
yaml-rust = "0.4.4"
syntect = "4.4"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }